source/_static/css/widget-sidebar: Fix widget sidebar overlap

--- a/source/_static/css/widget-sidebar.css
+++ b/source/_static/css/widget-sidebar.css
@@ -141,5 +141,5 @@
 
 /* Fix overlap of sidebar widgets and navbar*/
 .wy-nav-side {
-    padding-bottom: calc(4rem + 22px);
+    padding-bottom: 8rem;
 }
